/**
 * Copyright 2019 IBM
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 * 
 * This is being developed for the DITAS Project: https://www.ditas-project.eu/
 */
syntax = "proto3";

package com.ditas.ehealth;

import "DalMessageProperties.proto";
import "DalPrivacyProperties.proto";

service DataMovementService {
    rpc startDataMovement (StartDataMovementRequest) returns (StartDataMovementReply) {}
    rpc finishDataMovement (FinishDataMovementRequest) returns (FinishDataMovementReply) {}
}


message StartDataMovementRequest {
    DalMessageProperties dalMessageProperties = 1;
    DalPrivacyProperties sourcePrivacyProperties = 2;
    DalPrivacyProperties destinationPrivacyProperties = 3;

    string query = 4;
    repeated string queryParameters = 5;
    string sharedVolumePath = 6;
}


message StartDataMovementReply {
}

message FinishDataMovementRequest {
    DalMessageProperties dalMessageProperties = 1;
    DalPrivacyProperties sourcePrivacyProperties = 2;
    DalPrivacyProperties destinationPrivacyProperties = 3;

    string query = 4;
    repeated string queryParameters = 5;
    string sharedVolumePath = 6;
    string targetDatasource = 7;
}


message FinishDataMovementReply {
}
